--- a/skyfall/skyfall.html
+++ b/skyfall/skyfall.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkyFall</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="batuhansancak.css">
+  <link rel="stylesheet" href="skyfall.css">
   <link rel="icon" href="foto/MArs (2)-Photoroom.png" type="image/x-icon" sizes="64x64">
 </head>
 
@@ -261,7 +261,7 @@
 
   
 
-  <script src="batuhansancak.js"></script>
+  <script src="skyfall.js"></script>
 </body>
 
 
